GitVersion1/objects/Customer_360_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Show_Metrics_on_Inline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Metrics / Report Links</description>
        <label>Show Metrics on Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Opportunities_on_Inline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunities</description>
        <label>Show Opportunities on Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Segmentation_on_Inline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Segmentation / Potential</description>
        <label>Show Segmentation on Inline</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer 360 Setting</label>
</CustomObject>